# Defind

./: .gitignore  .pre-commit-config.yaml  README.md  STORAGE_STRUCTURE.md  WORKSPACE_README.md  mkdocs.yml  pyproject.toml  test_event_storage.py
.github/workflows/: ci.yml
docs/: index.md
examples/: example_aerodrome_eth_usdc_Base.py  example_univ3_eth_usdc_Ethereum.py
examples/abi/: aerodrome_clpool_abi.json  univ3_clpool_abi.json
notebooks/: full_pipeline_defind_to_pnl.ipynb  test_pnl_engine.ipynb  test_queries.ipynb
src/defind/: __init__.py  cli.py  constants.py  decoder.py  manifest.py  models.py  orchestrator.py  rpc.py  shards.py  test.ipynb
src/defind/abi_events/: __init__.py
src/defind/adapters/: models.py
src/defind/api/: fetch_data.py
src/defind/clients/: __init__.py  rpc.py
src/defind/core/: __init__.py  config.py  constants.py  interfaces.py  models.py
src/defind/core/use_cases/: fetch_decode.py
src/defind/decoding/: __init__.py  decoder.py  registries.py  registry.py  registry_builder.py  specs.py  utils.py
src/defind/orchestration/: __init__.py  coverage.py  orchestrator.py  utils.py
src/defind/storage/: __init__.py  directories.py  manifest.py  shards.py
src/defind/vfat/0xb4c31b0f0b76b351395d4acc94a54dd4e6fba1e8__topics-0xb1a29087__universal/manifests/: run_20250919_143518_0xb4c31b0f0b76b351395d4acc94a54dd4e6fba1e8_0xb1a29087_129164131_129164200.jsonl
src/defind/vfat/0xb4c31b0f0b76b351395d4acc94a54dd4e6fba1e8__topics-0xb1a29087__universal/shards/: shard_00001.parquet
src/define/: README.md  __init__.py  pyproject.toml  queries.py  sql_queries.py
tests/: __init__.py  conftest.py  test_decoder.py  test_domain_math.py  test_orchestrator.py  test_registries.py  test_valuation.py
