[project]
name = "defind"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "youssefGha98", email = "youssef@nomiks.io" }
]
dependencies = [
    "click>=8.2.1",
    "httpx[http2]>=0.28.1",
    "rich>=14.1.0",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "ipykernel>=6.30.1",
    "eth-abi>=5.2.0",
    "eth-utils>=5.3.1",
    "eth-hash[pycryptodome]>=0.7.1",
    "duckdb>=1.4.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/defind"]

[project.scripts]
defind = "defind.cli:cli"

