[project]
name = "defind"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "youssefGha98", email = "youssef@nomiks.io" }
]
dependencies = [
    "click>=8.2.1",
    "httpx[http2]>=0.28.1",
    "rich>=14.1.0",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "ipykernel>=6.30.1",
    "eth-abi>=5.2.0",
    "eth-utils>=5.3.1",
    "eth-hash[pycryptodome]>=0.7.1",
    "duckdb>=1.4.0",
]
readme = "README.md"
requires-python = ">= 3.8"


[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/defind"]

[project.scripts]
defind = "defind.cli:cli"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

