[project]
name = "define"
version = "0.1.0"
description = "DeFi PnL Calculator - Calculate profit and loss for DeFi positions"
authors = [
    { name = "youssefGha98", email = "youssef@nomiks.io" }
]
dependencies = [
    "click>=8.2.1",
    "rich>=14.1.0",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "defind",
    "pytest>=8.4.2",
    # Dependency on the indexer project
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
define = "define.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
